# lab_functions1

./: .gitignore  grid.py  hexagon.py  icecream.py  pyproject.toml  triangle.py
